Fixing bug 211587: Acrobat plugin crashes on Solaris because libXm.so is not loaded. Patch by Andreas Lange (a.lange@home.se) r=peterl sr=blizzard